# api/v1/shop_type.go
@@ -1,15 +1,15 @@
 package v1
 
 type (
-	GetShopTypeListRespDataItem struct {
+	QueryTypeListRespDataItem struct {
 		ID   int64   `json:"id"`
 		Name *string `json:"name"`
 		Icon *string `json:"icon"`
 		Sort *int32  `json:"sort"`
 	}
-	GetShopTypeListRespData []*GetShopTypeListRespDataItem
-	GetShopTypeListResp     struct {
+	QueryTypeListRespData []*QueryTypeListRespDataItem
+	QueryTypeListResp     struct {
 		Response
-		Data GetShopTypeListRespData `json:"data"`
+		Data QueryTypeListRespData `json:"data"`
 	}
 )
