# internal/handler/shop_type.go
@@ -22,16 +22,16 @@ func NewShopTypeHandler(
 	}
 }
 
-// GetShopTypeList godoc
+// QueryTypeList godoc
 // @Summary 获取商品类别列表
 // @Schemes
 // @Description
 // @Tags shop-type
 // @Produce json
-// @Success 200 {object} v1.GetShopTypeListResp
+// @Success 200 {object} v1.QueryTypeListResp
 // @Router /shop-type/list [get]
-func (h *ShopTypeHandler) GetShopTypeList(ctx *gin.Context) {
-	shopTypeList, err := h.shopTypeService.GetShopTypeList(ctx.Request.Context())
+func (h *ShopTypeHandler) QueryTypeList(ctx *gin.Context) {
+	shopTypeList, err := h.shopTypeService.QueryTypeList(ctx.Request.Context())
 	if err != nil {
 		v1.HandleError(ctx, http.StatusInternalServerError, err.Error(), nil)
 		return
